Adição da api key no build gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,12 @@ android {
     }
 
     buildTypes {
+        debug{
+            buildConfigField "String", "API_KEY", "xP9llmQQNXm5nNAyTBACCUhLws67gFSs"
+        }
         release {
             minifyEnabled false
+            buildConfigField "String", "API_KEY", "xP9llmQQNXm5nNAyTBACCUhLws67gFSs"
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
