Adicionando Picasso e configurando o movie adapter

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,10 @@ dependencies {
 
     implementation "androidx.recyclerview:recyclerview:1.1.0"
 
+
+    /* Picasso */
+    implementation "com.squareup.picasso:picasso:2.71828"
+
     //    request
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
